# template_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  run_tests.sh  vcpkg.json
.github/workflows/: ci.yaml
example/: CMakeLists.txt  example.cpp
include/: my_library.h
src/: CMakeLists.txt  my_library.cpp
test/: CMakeLists.txt
test/units/: demo_test.cpp
